# tp_lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: example1.cpp  example2.cpp
homework/: CMakeLists.txt  CPackConfig.cmake  LICENSE.rtf
sources/: print.cpp
